<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".activity.MapsActivity">


    <fragment android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/map"
              android:name="com.google.android.gms.maps.SupportMapFragment"/>


    <TextView
            android:id="@+id/tv_receive_updates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receive_updates"
            android:gravity="center"
            android:layout_margin="8dp"
            android:padding="16dp"
            android:textSize="24sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:onClick="onReceiveUpdatesClick"
    />

    <TextView
            android:id="@+id/tv_stop_updates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_receive_updates"
            android:text="@string/stop_updates"
            android:gravity="center"
            android:layout_margin="8dp"
            android:padding="16dp"
            android:textSize="24sp"
            android:background="@color/colorRed"
            android:textColor="@color/colorWhite"
            android:onClick="onStopUpdatesClick"
    />

    <TextView
            android:id="@+id/tv_exit_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/exit_map"
            android:gravity="center"
            android:layout_margin="8dp"
            android:padding="16dp"
            android:textSize="24sp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorWhite"
            android:onClick="onExitMapClick"
    />
</RelativeLayout>

